{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 37,
  "lineage": "574a69b7-9527-900b-3a76-101b1e6f4e7b",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-089cc16f7f08c4457",
            "arn": "arn:aws:ec2:eu-west-1:601344029207:instance/i-019fa1262c439d850",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-019fa1262c439d850",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awskey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09d259d067d876bcf",
            "private_dns": "ip-10-0-1-6.eu-west-1.compute.internal",
            "private_ip": "10.0.1.6",
            "public_dns": "ec2-18-202-36-54.eu-west-1.compute.amazonaws.com",
            "public_ip": "18.202.36.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0425a85c41da222fb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-085d85870a87a765a",
            "tags": {
              "Name": "Project EC2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b0670dc04aef44ab"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.projectsg",
            "module.vpc.aws_subnet.PubnetA"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:601344029207:internet-gateway/igw-0727be25bc17ba9e4",
            "id": "igw-0727be25bc17ba9e4",
            "owner_id": "601344029207",
            "tags": {
              "Name": "VPC Internet Gateway"
            },
            "vpc_id": "vpc-090df5b769f3bf01a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.projectvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f7905938e692ca6b",
            "owner_id": "601344029207",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0727be25bc17ba9e4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for VPC"
            },
            "vpc_id": "vpc-090df5b769f3bf01a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.vpc_igw",
            "module.vpc.aws_vpc.projectvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subA_rta",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da68fd23428c4206",
            "route_table_id": "rtb-0f7905938e692ca6b",
            "subnet_id": "subnet-085d85870a87a765a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.vpc_igw",
            "module.vpc.aws_route_table.vpc_rt",
            "module.vpc.aws_subnet.PubnetA",
            "module.vpc.aws_vpc.projectvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subB_rta",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030d005385b96a019",
            "route_table_id": "rtb-0f7905938e692ca6b",
            "subnet_id": "subnet-086df524aeb1c13fa"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.vpc_igw",
            "module.vpc.aws_route_table.vpc_rt",
            "module.vpc.aws_subnet.PubnetB",
            "module.vpc.aws_vpc.projectvpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "projectsg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:601344029207:security-group/sg-0b0670dc04aef44ab",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b0670dc04aef44ab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4200
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9966,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9966
              }
            ],
            "name": "terraform-20200703144231637300000004",
            "name_prefix": null,
            "owner_id": "601344029207",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg1"
            },
            "timeouts": null,
            "vpc_id": "vpc-090df5b769f3bf01a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.projectvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PubnetA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:601344029207:subnet/subnet-085d85870a87a765a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-085d85870a87a765a",
            "map_public_ip_on_launch": false,
            "owner_id": "601344029207",
            "tags": {
              "Name": "PubnetA"
            },
            "vpc_id": "vpc-090df5b769f3bf01a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.projectvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PubnetB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:601344029207:subnet/subnet-086df524aeb1c13fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-086df524aeb1c13fa",
            "map_public_ip_on_launch": false,
            "owner_id": "601344029207",
            "tags": {
              "Name": "PubnetB"
            },
            "vpc_id": "vpc-090df5b769f3bf01a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.projectvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "projectvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:601344029207:vpc/vpc-090df5b769f3bf01a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b7361a1f8ebc84f8",
            "default_route_table_id": "rtb-030207c705f495a3a",
            "default_security_group_id": "sg-0ee544b3b190f7110",
            "dhcp_options_id": "dopt-22d1fe44",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-090df5b769f3bf01a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-030207c705f495a3a",
            "owner_id": "601344029207",
            "tags": {
              "Name": "projectvpc"
            }
          }
        }
      ]
    }
  ]
}